--- a/DaemonKit/DaemonKit.csproj
+++ b/DaemonKit/DaemonKit.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <IncludePackageReferencesDuringMarkupCompilation>true</IncludePackageReferencesDuringMarkupCompilation>
   </PropertyGroup>
 
   <!-- <ItemGroup>
@@ -17,15 +18,18 @@
       <EmbedInteropTypes>false</EmbedInteropTypes>
     </COMReference>
   </ItemGroup> -->
-
+	    
   <ItemGroup>
     <PackageReference Include="MaterialDesignColors" Version="2.0.1" />
     <PackageReference Include="MaterialDesignThemes" Version="4.1.0" />
     <PackageReference Include="NLog" Version="4.7.11" />
+
     <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.1.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="ReactiveMarbles.PropertyChanged" Version="1.4.1" />
+    
     <PackageReference Include="ReactiveUI" Version="16.2.1" />
     <PackageReference Include="ReactiveUI.WPF" Version="16.2.1" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
