--- a/DaemonKit/DaemonKit.csproj
+++ b/DaemonKit/DaemonKit.csproj
@@ -14,6 +14,12 @@
     <PackageProjectUrl>https://github.com/MrBaoquan/DaemonApps</PackageProjectUrl>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
+    <WarningLevel>2</WarningLevel>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+  </PropertyGroup>
+
   <ItemGroup>
     <COMReference Include="IWshRuntimeLibrary">
       <WrapperTool>tlbimp</WrapperTool>
