--- a/DaemonKit/DaemonKit.csproj
+++ b/DaemonKit/DaemonKit.csproj
@@ -1,25 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<OutputType>Exe</OutputType>
-	<TargetFramework>net5.0-windows</TargetFramework>
-	<PublishSingleFile>true</PublishSingleFile>
-	<RuntimeIdentifier>win-x86</RuntimeIdentifier>
-	<PlatformTarget>x64</PlatformTarget>
-	<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net6.0-windows</TargetFramework>
+    <PublishSingleFile Condition="'$(Configuration)' == 'Release'">true</PublishSingleFile>
+    <RuntimeIdentifier>win-x86</RuntimeIdentifier>
+    <EnableCompressionInSingleFile>True</EnableCompressionInSingleFile>
+    <PlatformTarget>x86</PlatformTarget>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <UseWPF>true</UseWPF>
     <IncludePackageReferencesDuringMarkupCompilation>true</IncludePackageReferencesDuringMarkupCompilation>
-    <ApplicationIcon>logo.ico</ApplicationIcon>
+    <ApplicationIcon>Resources/logo.ico</ApplicationIcon>
     <StartupObject>DaemonKit.App</StartupObject>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Authors>MrBaoquan</Authors>
     <Company>@mrma617@gmail.com</Company>
     <Copyright>@mrbaoquan</Copyright>
     <PackageProjectUrl>https://github.com/MrBaoquan/DaemonApps</PackageProjectUrl>
-    <Version>0.0.9</Version>
+    <Version>1.0.0</Version>
     <Description>windows应用程序依赖编排软件</Description>
-    <Product>软件运维中心</Product>
+    <Product>运维管家</Product>
     <Platforms>AnyCPU;x64;x86</Platforms>
+    <AssemblyVersion>1.0.0.0203</AssemblyVersion>
+    <FileVersion>1.0.0.0203</FileVersion>
+    <NeutralLanguage>zh-CN</NeutralLanguage>
+    <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -27,41 +32,56 @@
     <WarningLevel>2</WarningLevel>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <Optimize>true</Optimize>
+    <DebugType>full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <WarningLevel>2</WarningLevel>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <Optimize>true</Optimize>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <WarningLevel>2</WarningLevel>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <Optimize>true</Optimize>
+    <DebugType>full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningLevel>2</WarningLevel>
+    <DebugType>full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <WarningLevel>2</WarningLevel>
+    <DebugType>full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <WarningLevel>2</WarningLevel>
+    <DebugType>full</DebugType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\Icons\quit.png" />
+    <None Remove="Resources\Icons\settings.png" />
+    <None Remove="Resources\Icons\show-panel.png" />
+    <None Remove="Resources\logo.ico" />
+  </ItemGroup>
 	    
   <ItemGroup>
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
-    <PackageReference Include="Hardware.Info" Version="10.0.0" />
-    <PackageReference Include="MaterialDesignColors" Version="2.0.4" />
-    <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NLog" Version="4.7.11" />
+    <PackageReference Include="H.NotifyIcon" Version="2.0.84" />
+    <PackageReference Include="H.NotifyIcon.Wpf" Version="2.0.84" />
+    <PackageReference Include="Hardware.Info" Version="10.1.1" />
+    <PackageReference Include="MaterialDesignColors" Version="2.1.1" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.7.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="NLog" Version="5.1.1" />
 
     <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.1.4">
       <PrivateAssets>all</PrivateAssets>
@@ -69,18 +89,42 @@
     </PackageReference>
     <PackageReference Include="ReactiveMarbles.PropertyChanged" Version="2.0.6" />
     
-    <PackageReference Include="ReactiveUI" Version="16.4.15" />
-    <PackageReference Include="ReactiveUI.WPF" Version="16.4.15" />
+    <PackageReference Include="ReactiveUI" Version="18.4.20" />
+    <PackageReference Include="ReactiveUI.WPF" Version="18.4.20" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
-    <PackageReference Include="TaskScheduler" Version="2.9.2" />
+    <PackageReference Include="TaskScheduler" Version="2.10.1" />
   </ItemGroup>
 	    
   <ItemGroup>
     <Folder Include="Applications\Tools\" />
-    <Folder Include="Properties\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Converters\" />
+  </ItemGroup>
+	    
+  <ItemGroup>
+    <Resource Include="Resources\Icons\quit.png" />
+    <Resource Include="Resources\Icons\settings.png" />
+    <Resource Include="Resources\Icons\show-panel.png" />
+    <Resource Include="Resources\logo.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Resource>
+  </ItemGroup>
+	    
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+	    
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 	    
   <ItemGroup>
@@ -143,7 +187,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </None>
-    <None Update="Resources\logo.ico">
+    <None Update="Resources\Icons\logo.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </None>
