--- a/AuthAssistant/AuthAssistant.csproj
+++ b/AuthAssistant/AuthAssistant.csproj
@@ -7,6 +7,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <PlatformTarget>x64</PlatformTarget>
+    <PackageIcon>avalonia-logo.png</PackageIcon>
+    <ApplicationIcon>Assets\avalonia-logo.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>full</DebugType>
@@ -22,6 +24,10 @@
 
   <ItemGroup>
     <None Remove="Costura64\LicHper.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\avalonia-logo.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -47,5 +53,17 @@
     <PackageReference Include="Material.Icons.Avalonia" Version="2.1.0" />
 	  <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Update="Assets\avalonia-logo.ico">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="Assets\avalonia-logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
