--- a/auth_ghost/auth_ghost.csproj
+++ b/auth_ghost/auth_ghost.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
+    <ApplicationIcon>Assets\ghost.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -15,6 +16,10 @@
 
   <ItemGroup>
     <None Remove="Costura64\LicHper.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\ghost.ico" />
   </ItemGroup>
 
   <ItemGroup>
